# id3-reader

./: .gitignore  Cargo.toml
id3-reader/: Cargo.toml
id3-reader/src/: buf_ext.rs  encoding.rs  lib.rs
id3-reader/src/v1/: decoder.rs  mod.rs
id3-reader/src/v2/: decoder.rs  encoding.rs  frame.rs  header.rs  mod.rs
mp3-decoders/: Cargo.toml
mp3-decoders/id3-decoder/: Cargo.toml
mp3-decoders/id3-decoder/src/: buf_ext.rs
mp3-decoders/id3-decoder/src/v1/: mod.rs
mp3-decoders/id3-decoder/src/v2/: mod.rs
mp3-decoders/mp3-decoder/: Cargo.toml
mp3-decoders/src/: lib.rs
mp3-reader/: Cargo.toml
src/: main.rs
src/models/: frames.rs  mod.rs  version.rs
src/models/v1/: id3v1.rs  mod.rs
src/models/v2/: frames.rs  header.rs  id3v2.rs  mod.rs
src/readers/: mod.rs  v1.rs  v2.rs
src/utils/: bytes.rs  identifier.rs  mod.rs
