[package]
name = "mp3-decoders"
version = "0.1.0"
authors = ["SaiintBrisson <luizcarlosmpc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id3-decoder = { path = "./id3-decoder" }
mp3-decoder = { path = "./mp3-decoder" }